--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,13 @@ license = "MIT"
 repository = "https://github.com/revoltchat/neon-serde4"
 resolver = "2"
 
+[features]
+chrono = ["dep:chrono", "dep:serde_with"]
+
+[dependencies.chrono]
+version = "0.4.41"
+optional = true
+
 [dependencies.neon]
 version = "1.0.0"
 
@@ -35,7 +42,14 @@ default-features = false
 [dependencies.serde]
 version = "1.0"
 
-[dev-dependencies]
+[dependencies.serde_with]
+version = "3.12.0"
+optional = true
+
+[dev-dependencies.chrono]
+version = "0.4.41"
+features = ["serde"]
+
 [dev-dependencies.serde]
 version = "1.0"
 features = ["derive"]
